<resources>
    <string name="app_name">DCEMS</string>
    <string name="image_splashscreen">image_splashscreen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_utilities">Utilities</string>
    <string name="title_alarms">Alarms</string>
    <string name="inputEmail">Input Email</string>
    <string name="inputPassword">Input Password</string>
    <string name="button_login">Log In</string>
    <string name="inputUsername">username</string>
    <string name="button_Cancel">Cancel</string>
    <string name="button_Add">Add</string>
    <string name="button_exit">X</string>
    <string name="Save">Save</string>
    <string name="button_AddUser">Add User</string>
    <string name="today_kwh_title">Today\'s kWH</string>
    <string name="today_bill_title">Today\'s Bill</string>
    <string name="today_kwh_placeholder">932 kW</string>
    <string name="today_bill_placeholder">Rp 2.8 JT</string>
    <string name="historical_kwh_label">Past kWH Data</string>
    <string name="export_button_desc">Export Utilities Data to Excel</string>

    <string-array name="data_name">
        <item>RAK 1</item>
        <item>RAK 2</item>
        <item>RAK 3</item>
        <item>RAK 4</item>
    </string-array>
    <string-array name="data_temperature">
        <item>24°C</item>
        <item>30°C</item>
        <item>99°C</item>
        <item>1337°C</item>
    </string-array>
    <string-array name="data_humidity">
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
    </string-array>
    <string-array name="data_status">
        <item>ON</item>
        <item>OFF</item>
        <item>ON</item>
        <item>OFF</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>