<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.yangPentingLulus.DCEMS.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_utilities"
        android:name="com.yangPentingLulus.DCEMS.ui.utilities.UtilitiesFragment"
        android:label="@string/title_utilities"
        tools:layout="@layout/fragment_utilities" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.yangPentingLulus.DCEMS.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarms" />
</navigation>