<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

    <TextView
        android:id="@+id/adduser_title"
        android:layout_width="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:text="Add User"
        android:textStyle="bold"
        android:textSize="35sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />


    <LinearLayout
        android:id="@+id/adduser_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/adduser_title"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Email"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adduser_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmail"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Password"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adduser_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPassword"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/adduser_form_layout"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/button_Add" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="300dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/button_Cancel"
            android:textColor="@color/primaryDarkColor"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>