<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp"
        android:text="Welcome back !"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/cardview_dark_background"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:textColor="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Login"
        android:textStyle="bold"
        android:textSize="35sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/tampil_email"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textSize="25sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintVertical_bias="0.347"
        tools:ignore="DuplicateIds" />


    <TextView
        android:id="@+id/tampil_password"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Password"
        android:textSize="25sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:ignore="DuplicateIds" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/inputEmail"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/inputPassword"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>