<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:textSize="25sp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/greyscale"
        android:layout_marginTop="10dp"
        android:text="@string/button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="Treshold Configuration"
        android:textStyle="bold"
        android:textSize="35sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        tools:ignore="DuplicateIds" />


    <TextView
        android:id="@+id/tampil_username"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="Warning (C)"
        android:textSize="25sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintVertical_bias="0.287"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/tampil_password"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Critical (C)"
        android:textSize="25sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"
        tools:ignore="DuplicateIds" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:background="@drawable/border"
        android:ems="10"
        android:padding="@dimen/_5sdp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:layout_marginTop="190dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.600" />
    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/greyscale"
        android:layout_marginTop="190dp"
        android:text="@string/button_AddUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

</androidx.constraintlayout.widget.ConstraintLayout>